# NaiveTinyRender

./: CMakeLists.txt  README.MD  Rasterizer.cpp  Rasterizer.h  Shader.h  TransFormation.h  Triangle.h  geometry.h  main  main.cpp  model.cpp  model.h  nohup.out  output.tga  test.hpp  tgaimage.h  utils.h
